test/arrays/ferguson/runtime-type-type.good
runtime-type-type.chpl:3: In function 'tf':
runtime-type-type.chpl:4: error: can't apply '.type' to a type ([domain(1,int(64),false)] int(64))
  runtime-type-type.chpl:7: called as tf(type t = [domain(1,int(64),false)] int(64))
